# midi

./: CMakeLists.txt  bind.lua
bind/: Fifo.h
include/midi/: In.h  Out.h
lib/: midi.lua
lib/midi/: In.lua  Message.lua  Note.lua  Out.lua
lubyk/: midi.lua
src/: CMakeLists.txt
src/bind/: midi_In.cpp  midi_Out.cpp  midi_core.cpp
test/: In_test.lua  Out_test.lua
